# indexed-db-panic

./: Cargo.toml  LICENSE-MIT  README.md  index.html
src/: app.rs  main.rs
