[package]
name = "indexed-db-panic"
version = "0.1.0"
edition = "2024"
description = "An app that causes the indexed-db crate to panic"
readme = "README.md"
repository = "https://github.com/ctm/indexed-db-panic"
license = "Unlicense OR MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_log = "1.0.0"
indexed-db = "0.4.2"
log = "0.4.27"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
yew = { version="0.21", features=["csr"] }
